# mpv-display-plugin

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: display.c
